Add --enable-preview to packaging tests